@@ -269,7 +269,8 @@ abstract class CActiveRecord extends CModel
 	}
 
 	/**
-	 * Returns the default named scope that should be applied to all queries implicitly for this model.
+	 * Returns the default named scope that should be implicitly applied to all queries for this model.
+	 * Note, default scope only applies to SELECT queries. It is ignored for INSERT, UPDATE and DELETE queries.
 	 * The default implementation simply returns an empty array. You may override this method
 	 * if the model needs to be queried with some default criteria (e.g. only active records should be returned).
 	 * @return array the query criteria. This will be used as the parameter to the constructor
@@ -396,6 +397,9 @@ abstract class CActiveRecord extends CModel
 	 * <li>'on': the ON clause. The condition specified here will be appended
 	 *   to the joining condition using the AND operator. This option has been
 	 *   available since version 1.0.2.</li>
+	 * <li>'index': the name of the column whose values should be used as keys
+	 *   of the array that stores related objects. This option is only available to
+	 *   HAS_MANY and MANY_MANY relations. This option has been available since version 1.0.7.</li>
 	 * </ul>
 	 *
 	 * The following options are available for certain relations when lazy loading:
@@ -572,16 +576,23 @@ abstract class CActiveRecord extends CModel
 	 * This method is used internally by {@link CActiveFinder} to populate related objects.
 	 * @param string attribute name
 	 * @param mixed the related record
-	 * @param boolean whether the relation is HAS_MANY/MANY_MANY.
+	 * @param mixed the index value in the related object collection.
+	 * If true, it means using zero-based integer index.
+	 * If false, it means a HAS_ONE or BELONGS_TO object and no index is needed.
 	 */
-	public function addRelatedRecord($name,$record,$multiple)
+	public function addRelatedRecord($name,$record,$index)
 	{
-		if($multiple)
+		if($index!==false)
 		{
 			if(!isset($this->_related[$name]))
 				$this->_related[$name]=array();
 			if($record instanceof CActiveRecord)
-				$this->_related[$name][]=$record;
+			{
+				if($index===true)
+					$this->_related[$name][]=$record;
+				else
+					$this->_related[$name][$index]=$record;
+			}
 		}
 		else if(!isset($this->_related[$name]))
 			$this->_related[$name]=$record;
@@ -1246,7 +1257,6 @@ abstract class CActiveRecord extends CModel
 		$builder=$this->getCommandBuilder();
 		$table=$this->getTableSchema();
 		$criteria=$builder->createPkCriteria($table,$pk,$condition,$params);
-		$this->applyScopes($criteria);
 		$command=$builder->createUpdateCommand($table,$attributes,$criteria);
 		return $command->execute();
 	}
@@ -1265,7 +1275,6 @@ abstract class CActiveRecord extends CModel
 		Yii::trace(get_class($this).'.updateAll()','system.db.ar.CActiveRecord');
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createCriteria($condition,$params);
-		$this->applyScopes($criteria);
 		$command=$builder->createUpdateCommand($this->getTableSchema(),$attributes,$criteria);
 		return $command->execute();
 	}
@@ -1284,7 +1293,6 @@ abstract class CActiveRecord extends CModel
 		Yii::trace(get_class($this).'.updateCounters()','system.db.ar.CActiveRecord');
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createCriteria($condition,$params);
-		$this->applyScopes($criteria);
 		$command=$builder->createUpdateCounterCommand($this->getTableSchema(),$counters,$criteria);
 		return $command->execute();
 	}
@@ -1302,7 +1310,6 @@ abstract class CActiveRecord extends CModel
 		Yii::trace(get_class($this).'.deleteByPk()','system.db.ar.CActiveRecord');
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createPkCriteria($this->getTableSchema(),$pk,$condition,$params);
-		$this->applyScopes($criteria);
 		$command=$builder->createDeleteCommand($this->getTableSchema(),$criteria);
 		return $command->execute();
 	}
@@ -1319,7 +1326,6 @@ abstract class CActiveRecord extends CModel
 		Yii::trace(get_class($this).'.deleteAll()','system.db.ar.CActiveRecord');
 		$builder=$this->getCommandBuilder();
 		$criteria=$builder->createCriteria($condition,$params);
-		$this->applyScopes($criteria);
 		$command=$builder->createDeleteCommand($this->getTableSchema(),$criteria);
 		return $command->execute();
 	}
@@ -1700,6 +1706,12 @@ class CHasManyRelation extends CActiveRelation
 	 * together with the primary table. Note that in version 1.0.x, the default value of this property was false.
 	 */
 	public $together=true;
+	/**
+	 * @var string the name of the column that should be used as the key for storing related objects.
+	 * Defaults to null, meaning using zero-based integer IDs.
+	 * @since 1.0.7
+	 */
+	public $index;
 
 	/**
 	 * Merges this relation with a criteria specified dynamically.
@@ -1714,6 +1726,9 @@ class CHasManyRelation extends CActiveRelation
 
 		if(isset($criteria['offset']) && $criteria['offset']>=0)
 			$this->offset=$criteria['offset'];
+
+		if(isset($criteria['index']))
+			$this->index=$criteria['index'];
 	}
 }
 
